Bug 534809 - Non-punycoded IDNs show up in the 'Ask' cookie sheet as gibberish. r=smorgan, sr=pink